# hop

./: README.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: hop-desktop.yml  pages.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  linux_runtime.rs  main.rs  menu.rs  pending_open.rs  state.rs  windows.rs
apps/studio-host/: hop-overrides.ts  index.html  package.json  vite.config.ts
apps/studio-host/src/: main.ts
apps/studio-host/src/command/: shortcut-map.test.ts  shortcut-map.ts
apps/studio-host/src/core/: desktop-events.test.ts  desktop-events.ts  tauri-bridge.test.ts  tauri-bridge.ts
apps/studio-host/src/engine/: caret-renderer.ts  cell-selection-renderer.ts  clipboard-data.test.ts  (+16 more)
docs/: KEYBOARD_SHORTCUTS.md  README.md
docs/architecture/: UPSTREAM.md
docs/operations/: DESKTOP_RELEASE.md  DESKTOP_RELEASE_V0_1_5.md  LINUX_APPIMAGE_IME_AND_CANVAS_BLUR_1PAGER.md
docs/specs/: desktop-large-file-io.md  linux-native-package-default.md
docs/specs/initial/: SPEC.md
site/: index.html  styles.css
tasks/: github-issue-comment-drafts-10-12-13-14-16-17-18-19.md  prd-hop-issues-10-14-18.md  prd-hop-issues-12-13-16-17-19.md
tasks/prd-hop-issues-12-13-16-17-19/: context.md  phase-01-issue-12-page-centering.md  phase-02-issue-13-cell-selection.md  phase-03-issue-16-installed-font-application.md  phase-04-issue-17-hancom-font-discovery.md  phase-05-issue-19-linux-glibc-baseline.md
tests/: rhwp-baseline.test.mjs
(+15 files in other folders)
